# soundy

./: .gitignore  .travis.yml  README  README.md  build.sh  com.github.syfds.soundy.yml  compile.sh  meson.build  test.sh  updatelang.sh  vala.conf
data/: com.github.sergejdobryak.soundy.appdata.xml  com.github.sergejdobryak.soundy.appdata.xml.in  com.github.sergejdobryak.soundy.desktop.in  com.github.syfds.soundy.appdata.xml.in  com.github.syfds.soundy.desktop.in  com.github.syfds.soundy.gschema.xml  gschema.xml  meson.build
debian/: changelog  control  copyright
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.sergejdobryak.soundy.pot  com.github.syfds.soundy.pot  de.po  es.po  it.po  meson.build  nl.po
src/: Application.vala  Connection.vala  Controller.vala  FavouriteMenuItem.vala  HeaderBar.vala  MainPanel.vala  Model.vala  Settings.vala  SoundtouchClient.vala  SoundtouchFinder.vala  SoundtouchMessageParser.vala  WebsocketConnection.vala  meson.build
src/Api/: API.vala  APIMethods.vala  HttpClient.vala  WebsocketConnection.vala
src/Controller/: AvahiBrowser.vala  Controller.vala  Model.vala  Settings.vala  SoundtouchMessageParser.vala
src/Dialog/: AboutDialog.vala  ConnectionDialog.vala
src/Widget/: FavouriteMenuItem.vala  GlobalGrid.vala  HeaderBar.vala  HelpPanel.vala  LoadableImage.vala  LoadableImagePanel.vala  MainPanel.vala  NetworkSpeakerList.vala  SettingsMenuItem.vala  SourcePanel.vala  SpeakerPanel.vala  SpeakerPanelGrid.vala  Util.vala  WelcomePanel.vala
test/: GetInfoParserTest.vala  GetZoneParserTest.vala  NowPlayingParserTest.vala  PresetsParserTest.vala  RecentsParserTest.vala  SoundtouchFinderTest.vala  SoundtouchMessageParserTest.vala  UtilTest.vala  meson.build
