dependencies = [
    glib, 
    gobject, 
    gtk, 
    granite,
    soup,
    xml
]

src_files = files([
'Api/API.vala',
'Api/HttpClient.vala',
'Api/APIMethods.vala',
'WebsocketConnection.vala',
'Controller.vala',
'Model.vala',
'SoundtouchMessageParser.vala',
'Settings.vala',
'Widget/MainPanel.vala',
'Widget/HeaderBar.vala',
'Widget/FavouriteMenuItem.vala',
'Widget/LoadableImage.vala',
'Widget/LoadableImagePanel.vala',
'Widget/WelcomePanel.vala',
'Dialog/ConnectionDialog.vala'
])

src_files_with_main = src_files + files(['Application.vala'])
