dependencies = [
    glib, 
    gobject, 
    gtk, 
    granite,
    soup,
    xml
]

src_files = files([
'Api/API.vala',
'Api/HttpClient.vala',
'Api/APIMethods.vala',
'Api/WebsocketConnection.vala',
'Controller/Controller.vala',
'Controller/Model.vala',
'Controller/SoundtouchMessageParser.vala',
'Controller/Settings.vala',
'Widget/MainPanel.vala',
'Widget/HeaderBar.vala',
'Widget/SettingsMenuItem.vala',
'Widget/FavouriteMenuItem.vala',
'Widget/LoadableImage.vala',
'Widget/LoadableImagePanel.vala',
'Widget/WelcomePanel.vala',
'Widget/HelpPanel.vala',
'Widget/Util.vala',
'Dialog/ConnectionDialog.vala',
'Dialog/AboutDialog.vala'
])

src_files_with_main = src_files + files(['Application.vala'])
